<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20dp"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/title"
        android:text="@string/amount"
        android:textSize="20dp"
        android:gravity="right"/>

</RelativeLayout>